Use LilyLib JSON builder instead of innate one.